# MIPSEmulator

./: CMakeLists.txt  LICENSE  README.md
MIPSLib/: CMakeLists.txt
MIPSLib/private/: MIPS.cpp
MIPSLib/public/: Coprocessor0.cpp  Coprocessor0.h  Display.cpp  Display.h  InstructionSet.cpp  InstructionSet.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h  Register.cpp  Register.h  Syscalls.cpp  Syscalls.h  mman.c  mman.h  mof.c  mof.h  syscall.cpp  syscall.h  utils.h
MIPSTest/: CMakeLists.txt
MIPSTest/src/: instruction_tests.cpp  memory_tests.cpp  processor_tests.cpp  register_tests.cpp  syscall_tests.cpp  writetest.txt
examples/: bird.out  palette.out  snake.out
examples/src/: __start.asm  bird.s  display.s  keyboard.s  palette.s  pseudo.asm  snake.s  snake_excp.s
